Enrollment exercises ignore the module close time
If a course has an enrollment exercise (questionnaire),
the exercise can be answered even if the module containing
the exercise has closed. The course enrollment ending time
still limits new enrollments.

Additionally, add a dot in the end of a sentence in
CourseModulePermission.

Add unit tests that submit to enrollment exercises after
the module closing time.

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -339,7 +339,7 @@ msgid "This course is only for external students."
 msgstr "Tämä kurssi on vain oppilaitoksen ulkopuolisille opiskelijoille."
 
 #: course/permissions.py:112
-msgid "The module is not currently visible"
+msgid "The module is not currently visible."
 msgstr "Tämä osio ei ole tällä hetkellä nähtävissä."
 
 #: course/permissions.py:131
