Allow language to be set in API submission
Allow the grading language to be set when submitting through the API.
Previously the language was always retrieved from django settings,
which would not allow the user to choose a submission language when
submitting using the API. The language can be added to the submission
POST data using the __aplus__  namespace as a JSON string with the key
"lang". For example to set the grading language to English:
`__aplus__={"lang": "en"}`

Fixes #581

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -2889,7 +2889,15 @@ msgstr "Tehtävässä on huoltokatko, ja sisältö on piilotettu opiskelijoilta.
 msgid "Unfortunately this exercise is currently under maintenance."
 msgstr "Valitettavasti tässä tehtävässä on juuri nyt huoltokatko."
 
-#: exercise/views.py:181
+#: exercise/views.py:155
+msgid ""
+"The submission could not be saved due to malformed post data. The submission "
+"was not registered. Error: {error}"
+msgstr ""
+"Palautuksen tallentaminen epäonnistui virheellisen pyynnön takia. Palautusta "
+"ei ole huomioitu. Virhe: {error}"
+
+#: exercise/views.py:193
 msgid "You need to sign in and enroll to submit exercises."
 msgstr ""
 "Palauttaaksesi tehtäviä sinun pitää rekisteröityä ja ilmoittautua kurssin "
