Handle invalid JSON in check_submission_allowed
Return an error message if POST data contains invalid JSON, when
getting group id in `_check_submission_allowed`.

Earlier this error was silently ignored, meaning that a user would
have gotten an error about how something is wrong with their group,
when it's really caused by a syntax error in the data.

Fixes https://github.com/apluslms/a-plus/issues/613

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -1871,7 +1871,11 @@ msgstr "Henkilökunta voi palauttaa tehtäviä ilmoittautumatta."
 msgid "You must enroll in the course to submit exercises."
 msgstr "Palauttaaksesi tehtäviä sinun pitää ilmoittautua kurssille."
 
-#: exercise/exercise_models.py:595
+#: exercise/exercise_models.py:584
+msgid "Cannot submit exercise because of invalid JSON in POST data"
+msgstr "Tehtävää ei voitu palauttaa, POST pyyntö sisälsi virheellistä JSON:nia"
+
+#: exercise/exercise_models.py:605
 msgid "Group can only change between different exercises."
 msgstr "Ryhmää voi vaihtaa vain eri tehtävien välissä."
 
