Use card layout on course archive page
This switches the course archive to use a layout similar to the front
page, and adapts the frontpage `card` component to include a "condensed"
version.

The courses are arranged by starting calendar year.

This leads to more consistency and resolves the small accessibility
issues found in the page.

The link to the archive also moves from hidden inside a sentence to
alongside the section header on the front page, and renames the
card-related classes to be a little more generic.

Fixes https://github.com/apluslms/a-plus/issues/626

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -676,9 +676,13 @@ msgstr "Minun kurssini"
 msgid "You do not currently have any active courses."
 msgstr "Sinulla ei ole käynnissä olevia kursseja."
 
-#: course/templates/course/index.html:33
+#: course/templates/course/index.html:36
 msgid "All ongoing courses"
-msgstr "Kaikki kurssit"
+msgstr "Meneillään olevat kurssit"
+
+#: course/templates/course/index.html:39
+msgid "See all courses"
+msgstr "Näytä kaikki kurssit"
 
 #: course/templates/course/index.html:62
 msgid "There are currently no active courses."
