Update the EU-U.S. Privacy Shield description in the privacy warnings
The European Court of Justice has declared that
the EU-U.S. Privacy Shield is invalid. The Privacy Shield setting
should not be used in the LinkService destination_region field
in the future. The destination region of current services should be
updated in production. This commit leaves the Privacy Shield
value to the model so that nothing breaks immediately in production.
This commit updates the descriptions in the user interface so that
they would not make false promises about Privacy Shield.

Fixes https://github.com/apluslms/a-plus/issues/680

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-30 19:24+0200\n"
+"POT-Creation-Date: 2020-11-30 20:35+0200\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
-"Last-Translator: Jhosimar Aguacia <jhosimar.aguaciafisco@aalto.fi>\n"
+"Last-Translator: Markku Riekkinen <markku.riekkinen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
@@ -2917,22 +2917,25 @@ msgstr ""
 
 #: external_services/models.py
 msgid ""
-"Destination is hosted in European Economic Area. Link to a privacy notice."
+"Destination is hosted in the European Economic Area. Link to a privacy "
+"notice."
 msgstr ""
 "Määränpää on ylläpidetty Euroopaan talousalueella. Linkataan "
 "tietosuojailmoitukseen."
 
 #: external_services/models.py
 msgid ""
-"Destination is hosted out side of European Economic Area, but certified "
-"under EU-US Privacy Shield. Link to an extended privacy notice."
+"Destination is hosted outside of the European Economic Area and used to be "
+"certified under the now invalid EU-US Privacy Shield. Link to an extended "
+"privacy notice."
 msgstr ""
-"Määränpää on ylläpidetty Euroopaan talousalueen ulkopuolella, mutta se on EU-"
-"US Privacy Shield -sertifioitu. Linkataan tietosuojailmoitukseen."
+"Määränpää on ylläpidetty Euroopaan talousalueen ulkopuolella ja se oli "
+"aiemmin EU-US Privacy Shield -sertifioitu. Privacy Shield -järjestely on "
+"nykyisin kumottu. Linkataan tietosuojailmoitukseen."
 
 #: external_services/models.py
 msgid ""
-"Destination is hosted out side of European Economic Area. Link to an "
+"Destination is hosted outside of the European Economic Area. Link to an "
 "extended privacy notice."
 msgstr ""
 "Määränpää on ylläpidetty Euroopaan talousalueen ulkopuolella. Linkataan "
@@ -3301,10 +3304,11 @@ msgid ""
 "protection/reform_en\" rel=\"noopener nofollow\" target=\"_blank\" class="
 "\"alert-link\">the European Union's General Data Protection Regulation</a> "
 "(GDPR).\n"
-"\tHowever, the service is certified under <a href=\"https://www."
-"privacyshield.gov/Individuals-in-Europe\" rel=\"noopener nofollow\" target="
-"\"_blank\" class=\"alert-link\">the EU-U.S. Privacy Shield</a>, which "
-"provides similar protection as GDPR.\n"
+"\tThe service used to be certified under <a href=\"https://www.privacyshield."
+"gov/Individuals-in-Europe\" rel=\"noopener nofollow\" target=\"_blank\" "
+"class=\"alert-link\">the EU-U.S. Privacy Shield</a>, but the European Court "
+"of Justice has declared the EU-U.S. Privacy Shield invalid. We are "
+"investigating how this affects the use of the service.\n"
 "\t"
 msgstr ""
 "\n"
@@ -3312,10 +3316,12 @@ msgstr ""
 "koske <a href=\"https://ec.europa.eu/info/law/law-topic/data-protection/"
 "reform_fi\" rel=\"noopener nofollow\" target=\"_blank\" class=\"alert-link"
 "\">Euroopan unionin yleinen tietosuoja-asetus</a> (GDPR).\n"
-"\tPalvelu on kuitenkin <a href=\"https://www.privacyshield.gov/Individuals-"
-"in-Europe\" rel=\"noopener nofollow\" target=\"_blank\" class=\"alert-link"
-"\">EU-U.S. Privacy Shield</a> -sertifioitu, joten se tarjoaa samankaltaisen "
-"yksityisyydensuojan kuin GDPR.\n"
+"\tPalvelu oli aiemmin <a href=\"https://www.privacyshield.gov/Individuals-in-"
+"Europe\" rel=\"noopener nofollow\" target=\"_blank\" class=\"alert-link\">EU-"
+"U.S. Privacy Shield</a> -sertifioitu, mutta Euroopan unionin tuomioistuin on "
+"kumonnut päätöksen EU-U.S. Privacy Shield -järjestelyn tietosuojan tason "
+"riittävyydestä. Selvitämme edelleen, kuinka uusi päätös vaikuttaa palvelun "
+"käyttöön.\n"
 "\t "
 
 #: external_services/templates/external_services/_privacy.html
